--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-froala-wysiwyg": "^4.2.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8"
