--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
+    "font-awesome": "^4.7.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-froala-wysiwyg": "^4.2.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
